Add code action for unsupported fields